--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
-<html lang="en" data-theme="dracula">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/012/872/330/original/bubble-chat-icon-3d-png.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vibes</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://static.vecteezy.com/system/resources/previews/012/872/330/original/bubble-chat-icon-3d-png.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Vibes</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
